v0.7.5 (2026-01-28)

- Update man page generation to now detect whether rst2man or rst2man.py is on
  the system instead of hardcoding one way or the other.
- Bump touchstone tools version from v0.9.2 to v0.10.0
- pgsql: naively add indexes on all columns used in DISTINCT, WHERE and ORDER
  BY clauses

v0.7.4 (2026-01-05)

- Simplify scripts by creating separate Greenplum query dialects and inputs
  instead of creating conditionals to use PostgreSQL templates
- Add generate-data script as a wrapper to dsdgen to facilitate testing data
  generation
- Add generate-query script as a wrapper to dsqgen to facilitate testing query
  generation
- Update pgsqlea template to use VERBOSE and BUFFERS with EXPLAIN ANALYZE
- Patch additional warnings and potential bugs in TPC-DS tools v4.0.0: build
  with -O2, -std=gnu99, fix checks on fread() return values, fix printing Zip
  with leading 0's, replace deprecated ftime() with gettimeofday(), free()
  dSiteOpen after its last reference.
- AppImage container updated to use debian archives for buster and new
  appimagetool release location
- Minor documentation updates to match recent usage changes
- Bump touchstone tools version from v0.9.1 to v0.9.2
- Remove non-POSIX use of ">&2 echo"

v0.7.3 (2025-05-30)

- pgsql: fix unique index definition on s_purchase_lineitem
- Add support for Greenplum
- greenplum: create tables with column orientation and appendonly
- greenplum: capture statistics, database, table and indexes sizes
- greenplum: explicitly set DISTRIBUTED BY for horizontal partitioning

v0.7.2 (2025-04-09)

- report: add --skip-process-plotting to optionally speed up report generation
  by not visualizing per process statistics
- report: add --skip-database-plotting to optionally speed up report generation
  by not visualizing database statistics

v0.7.1 (2025-02-25)

- report: fix links to sar plots
- report: fix links to per process plots
- pgsql-report: fix links to database statistics

v0.7.0 (2025-02-10)
