@@ -10,6 +10,7 @@ CMakeFiles
 cmake_install.cmake
 install_manifest.txt
 Makefile
+Testing
 
 !doc/Makefile
 doc/html
