@@ -1,3 +1,6 @@
+vX.Y.Z (YYYY-MM-DD)
+
+- Add CMake test to validate correctness of dsdgen chunking.
 v0.7.5 (2026-01-28)
 
 - Update man page generation to now detect whether rst2man or rst2man.py is on
